--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "cors": "^2.8.5",
-    "express": "^4.17.2"
-  },
-  "devDependencies": {
+    "express": "^4.17.2",
     "dotenv": "^16.0.0"
   }
 }
